[project]
name = "toggl-gcalendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3",
    "google-api-python-client>=2.143.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.2",
    "requests>=2.32.3",
]
